<resources>
    <string name="app_name">Demo2.4 Fragment</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_home_fragment">Hello home fragment</string>
    <string name="first">First</string>
    <string name="second">Second</string>
    <string name="home">Home</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="show_name">Show Name</string>
    <string name="time">Pick A Time</string>
</resources>
